--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@
                         <div class="mw-md-lg">
                             <span class="mb-4 badge rounded-pill bg-light text-dark text-uppercase shadow">Hollyhock-2
                                 for fx-CP400</span>
-                            <h1 class="mb-6 impact font-heading fs-1" style="letter-spacing: -1px;">Unlock Your Classpad
-                                II <span>Superpowers</span> ⚡</h1>
+                            <h1 class="mb-6 impact font-heading fs-1" style="letter-spacing: -1px;">Unlock A World Of <span>Unblocked Games</span> ⚡</h1>
                             <p class="mb-8 fs-9 fw-medium text-secondary">With one launcher, unlock a myriad of
                                 possibilities. From games to emulators, explore our ever-expanding library of
                                 programs... You can even create your own!</p>
