--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
-    <meta name="description" content="Explore the Classpad fx-CP400">
-    <meta itemprop="name" content="Classpad Dev">
-    <meta itemprop="description" content="Explore the Classpad fx-CP400">
+    <meta name="description" content="Explore the Unblocked Library">
+    <meta itemprop="name" content="Unblocked Dev>
+    <meta itemprop="description" content="Explore the Unblocked Library">
     <meta itemprop="image"
         content="https://res.cloudinary.com/s3ansh33p/image/upload/fl_lossy,f_auto/v1640786848/Classpad/classspad_2_grande_asfypp.webp">
     <meta property="og:url" content="https://classpaddev.github.io/">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Classpad Dev">
-    <meta property="og:description" content="Explore the Classpad fx-CP400">
+    <meta property="og:title" content="Unblocked Dev">
+    <meta property="og:description" content="Explore the Unblocked Library">
     <meta property="og:image"
         content="https://res.cloudinary.com/s3ansh33p/image/upload/fl_lossy,f_auto/v1640786848/Classpad/classspad_2_grande_asfypp.webp">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Classpad Dev">
-    <meta name="twitter:description" content="Explore the Classpad fx-CP400">
+    <meta name="twitter:title" content="Unblocked Dev">
+    <meta name="twitter:description" content="Explore the Unblocked Library">
     <meta name="twitter:image"
         content="https://res.cloudinary.com/s3ansh33p/image/upload/fl_lossy,f_auto/v1640786848/Classpad/classspad_2_grande_asfypp.webp">
-    <meta name="description" content="Explore the Classpad fx-CP400" />
-    <meta name="author" content="Sean McGinty" />
+    <meta name="description" content="Explore the Unblocked Library" />
+    <meta name="author" content="Josh Walters" />
     <meta name="google-site-verification" content="XZl64GJFi9Ga4ctg3f_tQwNCwTmpFj70GKCxNVgqOk4" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <title>Classpad Dev</title>
+    <title>Unblocked Dev</title>
     <!-- Favicon-->
     <link rel="icon" type="image/png"
         href="https://res.cloudinary.com/s3ansh33p/image/upload/fl_lossy,f_auto/v1640786848/Classpad/classspad_2_grande_asfypp.webp" />
