--- a/index.html
+++ b/index.html
@@ -148,19 +148,19 @@
                 <div class="row g-16">
                     <div class="col-12 col-md-6 d-flex align-items-center">
                         <div class="mw-md-lg">
-                            <span class="mb-4 badge rounded-pill bg-light text-dark text-uppercase shadow">Hollyhock-2
-                                for fx-CP400</span>
-                            <h1 class="mb-6 impact font-heading fs-1" style="letter-spacing: -1px;">Unlock A World Of <span>Unblocked Games</span> ⚡</h1>
+                            <span class="mb-4 badge rounded-pill bg-light text-dark text-uppercase shadow">Top Unblocked Games Without Flash
+                            </span>
+                            <h1 class="mb-6 impact font-heading fs-1" style="letter-spacing: -1px;">Unlock A World Of <span>Unblocked Games</span> 🎮</h1>
                             <p class="mb-8 fs-9 fw-medium text-secondary">With one website, unlock a library of
                                 games. From shooters to platformers, explore our ever-expanding library of
                                 programs... You can even add your own!</p>
 
                             <div class="row g-4 mt-2">
                                 <div class="col-12 col-md-auto"><a class="btn btn-lg btn-xl btn-primary w-100 shadow"
-                                        href="#get-started" onclick='nav("get-started")'>Get Started</a></div>
+                                        href="#get-started" onclick='nav("get-started")'>Play</a></div>
                                 <div class="col-12 col-md-auto">
                                     <div class="rounded"><a class="btn btn-lg btn-xl btn-outline-light w-100 text-light-dark"
-                                            href="#programs">View Programs</a></div>
+                                            href="#programs">Request a Game</a></div>
                                 </div>
                             </div>
                         </div>
