--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="top">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" onclick='nav("top")'>Classpad Dev</a>
+            <a class="navbar-brand" onclick='nav("top")'>Unblocked Dev</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -122,7 +122,7 @@
                 <div class="navbar-nav me-auto mb-3 mb-lg-0 ms-lg-4"></div>
                 <div class="d-flex align-items-center">
                     <ul class="navbar-nav me-auto mb-3 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link text-white" onclick='nav("get-started")'>Get Started</a>
+                        <li class="nav-item"><a class="nav-link text-white" onclick='nav("get-started")'>Play</a>
                         </li>
                         <li class="nav-item"><a class="nav-link text-white" onclick='nav("features")'>Features</a></li>
                         <li class="nav-item"><a class="nav-link text-white" onclick='nav("discord")'>Discord</a></li>
@@ -197,20 +197,11 @@
         id="get-started">
         <div class="mr-md-3 py-3 px-3 py-md-5 px-md-5 text-center overflow-hidden w-100 d-flex align-items-center">
             <div class="my-3 py-3 row align-items-center">
-                <h2 class="display-5">GET STARTED</h2>
-                <p class="lead">First of all, Welcome! We look forward to you joining the community!</p>
-                <p class="lead">Before you can run programs on the Classpad, you need to install some software. The
-                    launcher used for our programs is hollyhock-2.</p>
+                <h2 class="display-5">GAMES CATALOUGE</h2>
+
                 <a class="my-2" href="https://github.com/SnailMath/hollyhock-2" target="_blank" rel="noreferrer"><img
                         alt="GitHub Repo Preview" style="filter:invert(1); width: clamp(250px, 100%, 500px);"
                         src="https://gh-card.dev/repos/SnailMath/hollyhock-2.svg?fullname="></a>
-                <p class="lead mt-2">If you have issues with installing the Launcher, you can join the Discord and ask
-                    for
-                    help, or watch the video below.</p>
-                <iframe width="100%" height="auto" style="aspect-ratio:16/9;"
-                    src="https://www.youtube.com/embed/Llibqwt7Jsg" title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen=""></iframe>
             </div>
         </div>
     </section>
