--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Unblocked Dev">
     <meta property="og:description" content="Explore the Unblocked Library">
-    <meta property="og:image"
+    <meta property="og:image"f
         content="https://res.cloudinary.com/s3ansh33p/image/upload/fl_lossy,f_auto/v1640786848/Classpad/classspad_2_grande_asfypp.webp">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Unblocked Dev">
@@ -169,11 +169,11 @@
                         <div class="row justify-content-center">
                             <div class="position-relative col-auto">
                                 <img class="position-absolute top-0 start-0 mt-n12 ms-n12" style="z-index: 1;"
-                                    src="img/cp.svg" alt="Classpad II">
+                                    src="img/cp.svg" alt="Unblocked Dev">
                                 <img class="position-absolute bottom-0 end-0 me-n5 mb-n5" style="z-index: 1;"
                                     src="flex-assets/elements/dots-blue.svg" alt="">
                                 <img class="position-relative img-fluid p-5 screenshot" id="screenshots" src="img/doom.png"
-                                    alt="Doom on the Classpad II">
+                                    alt="Slope on Unblocked Dev">
                             </div>
                         </div>
                     </div>
