--- a/index.html
+++ b/index.html
@@ -1162,7 +1162,7 @@
 
         // Scrolling images
         // Image URLs
-        var images = ["img/gb.png", "img/doom.png", "img/term.png", "img/3drender.png", "img/flappy.png"];
+        var images = ["img/gb.png", "img/doom.jpg", "img/term.png", "img/3drender.png", "img/flappy.png"];
         var currentIndex = 0;
 
         // Preload images
