--- a/index.html
+++ b/index.html
@@ -203,9 +203,6 @@
         </div>
     </section>
     <!-- Features -->
-
-    <!-- Discord -->
-    
     <div>
         <!-- Specs -->
         <section class="position-relative overflow-hidden p-3 p-md-5 text-center w-100" id="specs">
@@ -898,11 +895,11 @@
         <footer class="py-5">
             <div class="container px-4 px-lg-5">
                 <div class="d-flex align-items-center justify-content-between mb-3">
-                    <a class="navbar-brand text-white" onclick='nav("top")'>Classpad Dev</a>
+                    <a class="navbar-brand text-white" onclick='nav("top")'>Unblocked Dev</a>
                 </div>
                 <hr class="opacity-100 text-white" />
                 <div class="d-flex align-items-center">
-                    <p class="m-0 text-white me-auto">Made with ❤&#xFE0E; by Sean McGinty</p>
+                    <p class="m-0 text-white me-auto">Made&#xFE0E; by Josh Walters</p>
                     <p class="m-0" id="updated">Last Updated: Loading...</p>
                 </div>
                 <div class="d-flex align-items-center pt-3">
