--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <h2 class="display-5">REQUEST A GAME</h2>
             <p class="lead">Below you can request a game for Unblocked Dev.</p>
             <div class="d-flex align-items-center justify-content-center w-100">
-                <iframe src="https://forms.office.com/Pages/ResponsePage.aspx?id=59GEvuZLzUCYAPT1FWYJVJOsnm-awQhKp6Qf11e-zCZUNUtCVjlOTTZKVUhaQUYxRzRGNFNMT000Ui4u" 
+                <iframe src="https://forms.gle/FmnVPUjMtznyUJYUA" 
                         width="60%" 
                         height="200px" 
                         frameborder="0" 
