--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
     <div class="mr-md-3 py-3 px-3 py-md-5 px-md-5 w-100 d-flex align-items-center">
         <div class="my-3 py-3 row align-items-center text-center">
             <h2 class="display-5">REQUEST A GAME</h2>
-            <p class="lead">Below you can request a game for Unblocked Dev.</p>
+            <p class="lead">Below you can request a game for Unblocked Dev</p>
             <div class="d-flex align-items-center justify-content-center w-100">
                 <iframe src="https://forms.office.com/Pages/ResponsePage.aspx?id=59GEvuZLzUCYAPT1FWYJVJOsnm-awQhKp6Qf11e-zCZUMTBHNFRYU0ZOSzZOSFgxWEZLNFExMUVJUC4u" 
-                        width="100%" 
+                        width="80%" 
                         height="200" 
                         frameborder="0" 
                         marginheight="0" 
