--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         </li>
                         <li class="nav-item"><a class="nav-link text-white" onclick='nav("features")'>Features</a></li>
                         </li>
-                        <li class="nav-item"><a class="nav-link text-white" onclick='nav("programs")'>Programs</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" onclick='nav("Request")'>Request</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="https://classpaddev.github.io/wiki/"
                                 target="_blank" rel="noreferrer">Wiki</a></li>
                     </ul>
@@ -158,7 +158,7 @@
                                         href="#get-started" onclick='nav("get-started")'>Play</a></div>
                                 <div class="col-12 col-md-auto">
                                     <div class="rounded"><a class="btn btn-lg btn-xl btn-outline-light w-100 text-light-dark"
-                                            href="#programs">Request a Game</a></div>
+                                            href="#Request">Request a Game</a></div>
                                 </div>
                             </div>
                         </div>
@@ -203,8 +203,8 @@
 
 
     
-        <!-- Programs -->
-        <section class="position-relative d-md-flex flex-md-equal w-100 mb-5" id="programs">
+        <!-- Request -->
+        <section class="position-relative d-md-flex flex-md-equal w-100 mb-5" id="Request">
     <div class="mr-md-3 py-3 px-3 py-md-5 px-md-5 w-100 d-flex align-items-center">
         <div class="my-3 py-3 row align-items-center text-center">
             <h2 class="display-5">REQUEST A GAME</h2>
