--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="navbar-nav me-auto mb-3 mb-lg-0 ms-lg-4"></div>
                 <div class="d-flex align-items-center">
                     <ul class="navbar-nav me-auto mb-3 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link text-white" onclick='nav("get-started")'>Play</a>
+                        <li class="nav-item"><a class="nav-link text-white" onclick='nav("Play")'>Play</a>
                         </li>
                         <li class="nav-item"><a class="nav-link text-white" onclick='nav("Request")'>Request</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="https://classpaddev.github.io/wiki/"
@@ -153,7 +153,7 @@
 
                             <div class="row g-4 mt-2">
                                 <div class="col-12 col-md-auto"><a class="btn btn-lg btn-xl btn-primary w-100 shadow"
-                                        href="#get-started" onclick='nav("get-started")'>Play</a></div>
+                                        href="#Play" onclick='nav("Play")'>Play</a></div>
                                 <div class="col-12 col-md-auto">
                                     <div class="rounded"><a class="btn btn-lg btn-xl btn-outline-light w-100 text-light-dark"
                                             href="#Request">Request a Game</a></div>
@@ -190,7 +190,7 @@
 
     <!-- Getting Started -->
     <section class="position-relative overflow-hidden p-3 p-md-5 text-center d-md-flex flex-md-equal w-100 bg-dark"
-        id="get-started">
+        id="Play">
         <div class="mr-md-3 py-3 px-3 py-md-5 px-md-5 text-center overflow-hidden w-100 d-flex align-items-center">
             <div class="my-3 py-3 row align-items-center">
                 <h2 class="display-5">GAMES CATALOUGE</h2>
