--- a/index.html
+++ b/index.html
@@ -123,10 +123,9 @@
                 <div class="d-flex align-items-center">
                     <ul class="navbar-nav me-auto mb-3 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link text-white" onclick='nav("Play")'>Play</a>
-                        </li>
                         <li class="nav-item"><a class="nav-link text-white" onclick='nav("Request")'>Request</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="https://classpaddev.github.io/wiki/"
-                                target="_blank" rel="noreferrer">Wiki</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="https://www.doldrums.tech"
+                                target="_blank" rel="noreferrer">Old Website</a></li>
                     </ul>
 
                 </div>
