--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="navbar-nav me-auto mb-3 mb-lg-0 ms-lg-4"></div>
                 <div class="d-flex align-items-center">
                     <ul class="navbar-nav me-auto mb-3 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link text-white" onclick='nav("Play")'>Play</a>
+                        <li class="nav-item"><a class="nav-link text-white" onclick='nav("Play Games")'>Play</a>
                         <li class="nav-item"><a class="nav-link text-white" onclick='nav("Request")'>Request</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="https://www.doldrums.tech"
                                 target="_blank" rel="noreferrer">Old Website</a></li>
@@ -168,7 +168,6 @@
                                 <img class="position-absolute bottom-0 end-0 me-n5 mb-n5" style="z-index: 1;"
                                     src="flex-assets/elements/dots-blue.svg" alt="">
                                 <img class="position-relative img-fluid p-5 screenshot" id="screenshots" src="img/doom.png"
-                                    alt="Slope on Unblocked Dev">
                             </div>
                         </div>
                     </div>
