--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             <div class="position-relative col-auto">
                                 <img class="position-absolute bottom-0 end-0 me-n5 mb-n5" style="z-index: 1;"
                                     src="flex-assets/elements/dots-blue.svg" alt="">
-                                <img class="position-relative img-fluid p-5 screenshot" id="screenshots" src="img/doom.png"
+                                <img class="position-relative img-fluid p-5 screenshot" id="screenshots" src="img/1127401-portrait.png"
                             </div>
                         </div>
                     </div>
