--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 
         // Scrolling images
         // Image URLs
-        var images = ["img/gb.png", "img/doom.jpg", "img/term.png", "img/3drender.png", "img/flappy.png"];
+        var images = ["1127401-portrait.png", "img/doom.jpg", "img/term.png", "img/3drender.png", "img/flappy.png"];
         var currentIndex = 0;
 
         // Preload images
