--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                 <div class="navbar-nav me-auto mb-3 mb-lg-0 ms-lg-4"></div>
                 <div class="d-flex align-items-center">
                     <ul class="navbar-nav me-auto mb-3 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link text-white" onclick='nav("Play Games")'>Play</a>
-                        <li class="nav-item"><a class="nav-link text-white" onclick='nav("Request")'>Request</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" onclick='nav("Play Games")'>Play Now</a>
+                        <li class="nav-item"><a class="nav-link text-white" onclick='nav("Request")'>Request Games</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="https://www.doldrums.tech"
                                 target="_blank" rel="noreferrer">Old Website</a></li>
                     </ul>
@@ -143,9 +143,9 @@
                 <div class="row g-16">
                     <div class="col-12 col-md-6 d-flex align-items-center">
                         <div class="mw-md-lg">
-                            <span class="mb-4 badge rounded-pill bg-light text-dark text-uppercase shadow">Top Unblocked Games Without Flash
+                            <span class="mb-4 badge rounded-pill bg-light text-dark text-uppercase shadow">Top Unblocked Games Without A Flash
                             </span>
-                            <h1 class="mb-6 impact font-heading fs-1" style="letter-spacing: -1px;">Unlock A World Of <span>Unblocked Games</span> 🎮</h1>
+                            <h1 class="mb-6 impact font-heading fs-1" style="letter-spacing: -1px;">Unlock A World Of <span>Unblocked Games</span> 🕹️</h1>
                             <p class="mb-8 fs-9 fw-medium text-secondary">With one website, unlock a library of
                                 games. From shooters to platformers, explore our ever-expanding library of
                                 programs... You can even add your own!</p>
