--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
                             <div class="row g-4 mt-2">
                                 <div class="col-12 col-md-auto"><a class="btn btn-lg btn-xl btn-primary w-100 shadow"
-                                        href="#Play" onclick='nav("Play")'>Play</a></div>
+                                        href="#Play" onclick='nav("Play")'>Play Now</a></div>
                                 <div class="col-12 col-md-auto">
                                     <div class="rounded"><a class="btn btn-lg btn-xl btn-outline-light w-100 text-light-dark"
                                             href="#Request">Request a Game</a></div>
