--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <div class="row justify-content-center">
                             <div class="position-relative col-auto">
                                 <img class="position-absolute top-0 start-0 mt-n12 ms-n12" style="z-index: 1;"
-                                    src="img/cp.svg" alt="Classpad II">
+                                    src="img/iphone.svg" alt="Classpad II">
                                 <img class="position-absolute bottom-0 end-0 me-n5 mb-n5" style="z-index: 1;"
                                     src="flex-assets/elements/dots-blue.svg" alt="">
                                 <img class="position-relative img-fluid p-5 screenshot" id="screenshots" src="img/doom.png"
