--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <div class="col-12 col-md-6 mt-2">
                         <div class="row justify-content-center">
                             <div class="position-relative col-auto">
-                                <img src="doom.jpg" alt="Description" class="img-fluid rounded">
+                                <img src="img/doom.jpg" alt="Description" class="img-fluid rounded">
 
                                 
                                 
