--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<iframe src="https://unblocked-game66.com/gg/run-3/" width="520.4777777777778" height="337" scrolling="no" allowfullscreen="true" border="0" frameborder="0" style=""></iframe>
+<iframe src="https://unblocked-game66.com/gg/slope/" width="520.4777777777778" height="337" scrolling="no" allowfullscreen="true" border="0" frameborder="0" style=""></iframe>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=yes" />
