--- a/index.html
+++ b/index.html
@@ -190,6 +190,8 @@
         <div class="mr-md-3 py-3 px-3 py-md-5 px-md-5 text-center overflow-hidden w-100 d-flex align-items-center">
             <div class="my-3 py-3 row align-items-center">
                 <h2 class="display-5">GAMES CATALOUGE</h2>
+                <button onclick="window.location.href='slope/index.html';">Go to Slope</button>
+
             </div>
         </div>
     </section>
