--- a/slope/index.html
+++ b/slope/index.html
@@ -63,7 +63,7 @@
     </header>
     
     <div id="game-container">
-        <iframe src="slope-game.html"></iframe>
+        <iframe src="https://unblocked-game66.com/gg/slope/" allowfullscreen></iframe>
     </div>
     
     <!-- Footer -->
