--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="icon" type="image/png"
         href="https://res.cloudinary.com/s3ansh33p/image/upload/fl_lossy,f_auto/v1640786848/Classpad/classspad_2_grande_asfypp.webp" />
     <!-- Google Fonts-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link rel="preload"
         href="https://fonts.googleapis.com/css2?family=Archivo+Black&amp;family=Poppins:wght@100;200;300;400;500;600;700&amp;display=swap"
@@ -190,8 +191,9 @@
         <div class="mr-md-3 py-3 px-3 py-md-5 px-md-5 text-center overflow-hidden w-100 d-flex align-items-center">
             <div class="my-3 py-3 row align-items-center">
                 <h2 class="display-5">GAMES CATALOUGE</h2>
-                <button onclick="window.location.href='slope';">Slope</button>
-
+                <button class="round-button" onclick="window.location.href='slope';">
+                    <img src="slope-icon.png" alt="Slope" class="icon">
+                </button>
             </div>
         </div>
     </section>
