--- a/index.html
+++ b/index.html
@@ -192,8 +192,11 @@
             <div class="my-3 py-3 row align-items-center">
                 <h2 class="display-5">GAMES CATALOUGE</h2>
                 <button class="round-button" onclick="window.location.href='slope';">
-                    <img src="slope-icon.png" alt="Slope" class="icon">
-                </button>
+                <!-- Mountain icon SVG -->
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="30" height="30">
+                    <path d="M12 2L1 21h22L12 2zm0 3.8l7.8 13.2H4.2L12 5.8z"/>
+                </svg>
+            </button>
             </div>
         </div>
     </section>
