--- a/slope/index.html
+++ b/slope/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../index.css">
     <style>
         body {
-            background-color: grey;
+            background-color: dark grey;
             color: white;
             text-align: center;
         }
@@ -29,7 +29,7 @@
             max-width: 900px;
             margin: 50px auto;
             border: 4px solid white;
-            border-radius: 5px;
+            border-radius: 10px;
             overflow: hidden;
         }
         iframe {
