--- a/slope/index.html
+++ b/slope/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../index.css">
     <style>
         body {
-            background-color: dark grey;
+            background-color: #141414;
             color: white;
             text-align: center;
         }
