--- a/slope/index.html
+++ b/slope/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../index.css">
     <style>
         body {
-            background-color: #141414;
+            background-color: #0f0f0f;
             color: white;
             text-align: center;
         }
@@ -28,7 +28,7 @@
             width: 100%;
             max-width: 900px;
             margin: 50px auto;
-            border: 4px solid white;
+            border: 2px solid white;
             border-radius: 10px;
             overflow: hidden;
         }
