--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
     </noscript>
     <!-- Loader CSS -->
     <style>
+        @font-face {
+            font-family: __Space_Grotesk_0aa4ae;
+            font-style: normal;
+            font-weight: 300 700;
+            font-display: swap;
+            src: url(../media/62328fecf9e80426-s.woff2) format("woff2");
+            unicode-range: u+0102-0103,u+0110-0111,u+0128-0129,u+0168-0169,u+01a0-01a1,u+01af-01b0,u+0300-0301,u+0303-0304,u+0308-0309,u+0323,u+0329,u+1ea0-1ef9,u+20ab;
+        }
+
+        h1 {
+            font-family: __Space_Grotesk_0aa4ae;
+            letter-spacing: -1px;
+        }
         #loader {
             width: 100vw;
             height: 100vh;
@@ -145,7 +158,7 @@
                         <div class="mw-md-lg">
                             <span class="mb-4 badge rounded-pill bg-light text-dark text-uppercase shadow">Top Unblocked Games Without A Flash
                             </span>
-                            <h1 class="mb-6 impact font-heading fs-1" style="letter-spacing: -1px;">Unlock A World Of <span>Unblocked Games</span> 🎮</h1>
+                            <h1 class="mb-6 impact font-heading fs-1" style="font-family: __Space_Grotesk_0aa4ae; letter-spacing: -1px;">Unlock A World Of <span>Unblocked Games</span> 🎮</h1>
                             <p class="mb-8 fs-9 fw-medium text-secondary">With one website, unlock a library of
                                 games. From shooters to platformers, explore our ever-expanding library of
                                 programs... You can even add your own!</p>
