--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <div class="mw-md-lg">
                             <span class="mb-4 badge rounded-pill bg-light text-dark text-uppercase shadow">Top Unblocked Games Without A Flash
                             </span>
-                            <h1 class="text-4xl md:text-6xl font-bold" style="font-family: __Space_Grotesk_0aa4ae; letter-spacing: -1px;">Unlock A World Of <span>Unblocked Games</span> 🎮</h1>
+                            <h1 class="mb-6 impact font-heading fs-1" style="font-family: __Space_Grotesk_0aa4ae; letter-spacing: -1px;">Unlock A World Of <span>Unblocked Games</span> 🎮</h1>
                             <p class="mb-8 fs-9 fw-medium text-secondary">With one website, unlock a library of
                                 games. From shooters to platformers, explore our ever-expanding library of
                                 programs... You can even add your own!</p>
