--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                             <p class="mb-8 fs-9 fw-medium text-secondary">With one website, unlock a library of
                                 games. From shooters to platformers, explore our ever-expanding library of
                                 programs... You can even add your own!</p>
+                            <span class="inline animate-gradient bg-gradient-to-r from-[#ffaa40] via-[#9c40ff] to-[#ffaa40] bg-[length:var(--bg-size)_100%] bg-clip-text text-transparent">movies,</span>
 
                             <div class="row g-4 mt-2">
                                 <div class="col-12 col-md-auto"><a class="btn btn-lg btn-xl btn-primary w-100 shadow"
