--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
     </noscript>
     <!-- Custom CSS -->
     <link rel="preload" href="index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.1/dist/tailwind.min.css" rel="stylesheet">
+
     <noscript>
         <link rel="stylesheet" href="index.css">
     </noscript>
