--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=yes" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=false" />
     <meta name="description" content="Explore the Unblocked Library">
     <meta itemprop="name" content="Unblocked Dev>
     <meta itemprop="description" content="Explore the Unblocked Library">
