--- a/slope/index.html
+++ b/slope/index.html
@@ -20,12 +20,13 @@
     <link rel="stylesheet" href="../index.css">
     <style>
         body {
-            background-color: #0f0f0f;
+            background-color: #0e0e11;
             color: white;
             text-align: center;
         }
         #game-container {
             width: 100%;
+            transparency: 50%;
             max-width: 900px;
             margin: 50px auto;
             border: 2px solid white;
