--- a/slope/index.html
+++ b/slope/index.html
@@ -38,6 +38,29 @@
             height: 600px;
             border: none;
         }
+        .c-button {
+            min-width: 100%;
+            font-family: "Gill Sans", sans-serif;
+            font-weight: bolder;
+            appearance: none;
+            border: 0;
+            border-radius: 5px;
+            background-size: 50px 50px;
+            background-color: #ac0;
+            background-image: linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
+            color: #000;
+            padding: 10px 46px;
+            font-size: 16px;
+            cursor: pointer;
+            margin-top: 15px;
+        }
+        .c-button:hover {
+            background: #9a0;
+        }
+        .c-button:focus {
+            outline: none;
+            box-shadow: 0 0 0 4px #cbd6ee;
+        }
     </style>
 </head>
 <body>
@@ -66,6 +89,7 @@
     <div id="game-container">
         <iframe src="https://unblocked-game66.com/gg/slope/" allowfullscreen></iframe>
     </div>
+    
     
     <!-- Footer -->
     <footer class="py-4 bg-dark text-white">
