--- a/slope/index.html
+++ b/slope/index.html
@@ -89,6 +89,11 @@
     <div id="game-container">
         <iframe src="https://unblocked-game66.com/gg/slope/" allowfullscreen></iframe>
     </div>
+
+    <div id="game-container">
+        <iframe src="https://unblocked-game66.com/gg/slope/" allowfullscreen></iframe>
+        <button class="c-button">[ PLAY FULLSCREEN ]</button>
+    </div>
     
     
     <!-- Footer -->
