--- a/slope/index.html
+++ b/slope/index.html
@@ -101,5 +101,22 @@
     
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+        var url = "https://unblocked-game66.com/gg/slope/";
+
+        document.querySelector('.c-button').onclick = function() {
+            var win = window.open('', '_blank', 'width=100%, height=100%, fullscreen=yes');
+            win.document.body.style.margin = '0';
+            win.document.body.style.height = '100vh';
+            var iframe = win.document.createElement('iframe');
+            iframe.style.border = 'none';
+            iframe.style.width = '100%';
+            iframe.style.height = '100%';
+            iframe.src = url;
+            win.document.body.appendChild(iframe);
+        };
+    </script>
+    
 </body>
 </html>
