--- a/slope/index.html
+++ b/slope/index.html
@@ -38,29 +38,41 @@
             height: 600px;
             border: none;
         }
+
         .c-button {
             min-width: 100%;
             font-family: "Gill Sans", sans-serif;
             font-weight: bolder;
             appearance: none;
             border: 0;
+            border-color: #fff;
             border-radius: 5px;
             background-size: 50px 50px;
             background-color: #ac0;
+            background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
+            background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
+            background-image: -ms-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
+            background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
             background-image: linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
             color: #000;
-            padding: 10px 46px;
+            padding: 0px 46px;
             font-size: 16px;
             cursor: pointer;
-            margin-top: 15px;
         }
         .c-button:hover {
-            background: #9a0;
+            background: #ac0;
         }
         .c-button:focus {
             outline: none;
             box-shadow: 0 0 0 4px #cbd6ee;
         }
+        .c-button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+        }
+
     </style>
 </head>
 <body>
