--- a/slope/index.html
+++ b/slope/index.html
@@ -99,7 +99,7 @@
     
     <div id="game-container">
         <iframe src="https://unblocked-game66.com/gg/slope/" allowfullscreen></iframe>
-        <button class="c-button">[ PLAY FULLSCREEN ]</button>
+        <button class="c-button"> PLAY FULLSCREEN </button>
 
     </div>
 
