--- a/slope/index.html
+++ b/slope/index.html
@@ -39,6 +39,12 @@
             border: none;
         }
 
+        #Fullscreen {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
         .c-button {
             min-width: 50%;
             font-weight: bolder;
