--- a/slope/index.html
+++ b/slope/index.html
@@ -46,7 +46,7 @@
         }
 
         .c-button {
-            min-width: 60%;
+            min-width: 58%;
             font-weight: bolder;
             appearance: none;
             border: 0;
@@ -69,7 +69,7 @@
         }
         .c-button:focus {
             outline: none;
-            box-shadow: 0 0 0 4px #cbd6ee;
+            box-shadow: 0 0 0 4px #121216;
         }
         .c-button {
             display: flex;
