--- a/slope/index.html
+++ b/slope/index.html
@@ -43,10 +43,11 @@
             display: flex;
             justify-content: center;
             margin-top: 20px;
+            max-width: 900px;
         }
 
         .c-button {
-            min-width: 58%;
+            min-width: 100%;
             font-weight: bolder;
             appearance: none;
             border: 0;
