--- a/slope/index.html
+++ b/slope/index.html
@@ -42,8 +42,10 @@
         #Fullscreen {
             display: flex;
             justify-content: center;
+            align-items: center;
             margin-top: 20px;
             max-width: 900px;
+            margin: 0 auto;
         }
 
         .c-button {
