--- a/slope/index.html
+++ b/slope/index.html
@@ -56,7 +56,7 @@
             border-color: #fff;
             border-radius: 10px;
             background-size: 50px 50px;
-            background-color: #000000;
+            background-color: #0e0e11;
             color: #FFFFFF;
             padding: 0px 46px;
             font-size: 16px;
