--- a/slope/index.html
+++ b/slope/index.html
@@ -63,7 +63,8 @@
             cursor: pointer;
         }
         .c-button:hover {
-            background: #ac0;
+            background: #ffffff;
+            color: black;
         }
         .c-button:focus {
             outline: none;
