--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=false" />
     <meta name="description" content="Explore the Unblocked Library">
-    <meta itemprop="name" content="Unblocked Dev>
+    <meta itemprop="name" content="Unblocked Dev">
     <meta itemprop="description" content="Explore the Unblocked Library">
     <meta itemprop="image"
         content="https://res.cloudinary.com/s3ansh33p/image/upload/fl_lossy,f_auto/v1640786848/Classpad/classspad_2_grande_asfypp.webp">
@@ -197,7 +197,7 @@
                 
                 
             </div>
-            <button class="round-button" onclick="window.location.href='slope';">
+            <button class="round-button mt-3" onclick="window.location.href='slope';">
                 <!-- Mountain icon SVG -->
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="30" height="30">
                     <path d="M12 2L1 21h22L12 2zm0 3.8l7.8 13.2H4.2L12 5.8z"/>
