--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     
         <!-- Request -->
         <section class="position-relative d-md-flex flex-md-equal w-100 mb-5" id="Request">
-    <div class="mr-md-3 py-3 px-3 py-md-5 px-md-5 w-100 d-flex align-items-center">
+    <div class="mr-md-3 py-3 px-3 py-md-5 px-md-5 w-100 d-flex flex-column align-items-center justify-content-center">
         <div class="my-3 py-3 row align-items-center text-center">
             <h2 class="display-5">REQUEST A GAME</h2>
             <p class="lead">Below you can request a game for Unblocked Dev</p>
