--- a/slope/index.html
+++ b/slope/index.html
@@ -29,7 +29,7 @@
             transparency: 50%;
             max-width: 900px;
             margin: 50px auto;
-            border: 2px solid white;
+            border: 2px solid rgba(255, 255, 255, 0.5);
             border-radius: 10px;
             overflow: hidden;
         }
@@ -52,7 +52,7 @@
             min-width: 100%;
             font-weight: bolder;
             appearance: none;
-            border: 2px solid white;
+            border: 2px solid rgba(255, 255, 255, 0.5);
             border-color: #fff;
             border-radius: 10px;
             background-size: 50px 50px;
