--- a/slope/index.html
+++ b/slope/index.html
@@ -63,7 +63,7 @@
             cursor: pointer;
         }
         .c-button:hover {
-            background: rgba(255, 255, 255, 0.2);
+            background: #FFFFFF;
             color: black;
         }
         .c-button:focus {
