--- a/slope/index.html
+++ b/slope/index.html
@@ -52,7 +52,7 @@
             min-width: 100%;
             font-weight: bolder;
             appearance: none;
-            border: 2px solid rgba(255, 255, 255, 0.5);
+            border: none;
             border-color: #fff;
             border-radius: 10px;
             background-size: 50px 50px;
