--- a/slope/index.html
+++ b/slope/index.html
@@ -52,8 +52,7 @@
             min-width: 100%;
             font-weight: bolder;
             appearance: none;
-            border: none;
-            border-color: #fff;
+            border: 2px solid rgba(255, 255, 255, 0.2);
             border-radius: 10px;
             background-size: 50px 50px;
             background-color: #1f2937;
