--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://cdn.tailwindcss.com"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=false" />
     <meta name="description" content="Explore the Unblocked Library">
@@ -148,7 +149,13 @@
                             </span>
                             
 
-                            <h1 class="mb-6 impact font-heading fs-1" style="letter-spacing: -1px;">Unlock A World Of <span>Unblocked Games</span> 🎮</h1>
+                            <h1 class="mb-6 impact font-heading fs-1" style="letter-spacing: -1px;">
+                                Unlock A World Of 
+                                <span class="inline animate-gradient bg-gradient-to-r from-[#ffaa40] via-[#9c40ff] to-[#ffaa40] bg-[length:var(--bg-size)_100%] bg-clip-text text-transparent">
+                                    Unblocked Games
+                                </span> 🎮
+                            </h1>
+
                             <p class="mb-8 fs-9 fw-medium text-secondary">With one website, unlock a library of
                                 games. From shooters to platformers, explore our ever-expanding library of
                                 programs... You can even add your own!</p>
