--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Unblocked Dev">
     <meta property="og:description" content="Explore the Unblocked Library">
-    <meta property="og:image"f
+    <meta property="og:image"
         content="https://res.cloudinary.com/s3ansh33p/image/upload/fl_lossy,f_auto/v1640786848/Classpad/classspad_2_grande_asfypp.webp">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Unblocked Dev">
