--- a/index.html
+++ b/index.html
@@ -149,12 +149,14 @@
                             </span>
                             
 
-                            <h1 class="mb-6 impact font-heading fs-1" style="letter-spacing: -1px;">
+                            <h1 class="mb-6 impact font-heading text-4xl font-bold tracking-tight">
                                 Unlock A World Of 
-                                <span class="inline animate-gradient bg-gradient-to-r from-[#ffaa40] via-[#9c40ff] to-[#ffaa40] bg-[length:var(--bg-size)_100%] bg-clip-text text-transparent">
+                                <span class="bg-gradient-to-r from-[#ffaa40] via-[#9c40ff] to-[#ffaa40] 
+                                    bg-clip-text text-transparent">
                                     Unblocked Games
                                 </span> 🎮
                             </h1>
+
 
                             <p class="mb-8 fs-9 fw-medium text-secondary">With one website, unlock a library of
                                 games. From shooters to platformers, explore our ever-expanding library of
