--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
-            heme: {
+            theme: {
                 extend: {},
             }
         }
