--- a/index.html
+++ b/index.html
@@ -157,22 +157,22 @@
                             <span class="mb-4 badge rounded-pill bg-light text-dark text-uppercase shadow">Top Unblocked Games Without A Flash
                             </span>
 
-                            <h1 style="opacity: 1; will-change: auto;" class="text-4xl md:text-6xl font-bold font-heading tracking-tight">
-                                Unlock A<!-- --> 
+                            <!--<h1 style="opacity: 1; will-change: auto;" class="text-4xl md:text-6xl font-bold font-heading tracking-tight">
+                                Unlock A
                                 <span class="inline animate-gradient bg-gradient-to-r from-[#00dc68] via-[#9c40ff] to-[#00dc68] bg-[length:var(--bg-size)_100%] bg-clip-text text-transparent"></span>
-                                <!-- -->World Of<!-- --> 
+                                World Of
                                 <span class="inline animate-gradient bg-gradient-to-r from-[#00dc68] via-[#9c40ff] to-[#00dc68] bg-[length:var(--bg-size)_100%] bg-clip-text text-transparent">Unblocked Games</span>
-                                <!-- --> 🎮<!-- -->
-                            </h1>
+                                 🎮
+                            </h1>-->
                             
 
-                            <!--<h1 class="mb-6 impact font-heading text-4xl font-bold tracking-tight">
+                            <h1 class="mb-6 impact font-heading text-4xl font-bold tracking-tight">
                                 Unlock A World Of 
                                 <span class="bg-gradient-to-r from-[#ffaa40] via-[#9c40ff] to-[#ffaa40] 
                                     bg-clip-text text-transparent">
                                     Unblocked Games
                                 </span> 🎮
-                            </h1>-->
+                            </h1>
 
 
                             <p class="mb-8 fs-9 fw-medium text-secondary">With one website, unlock a library of
