--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {},
-            }
-        }
-    </script>
 
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=false" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=yes" />
     <meta name="description" content="Explore the Unblocked Library">
     <meta itemprop="name" content="Unblocked Dev">
     <meta itemprop="description" content="Explore the Unblocked Library">
