--- a/slope/index.html
+++ b/slope/index.html
@@ -55,7 +55,7 @@
             border: 2px solid rgba(255, 255, 255, 0.2);
             border-radius: 10px;
             background-size: 50px 50px;
-            background-color: #1f2937;
+            background-color: #272730;
             color: #FFFFFF;
             padding: 0px 46px;
             font-size: 16px;
