--- a/slope/index.html
+++ b/slope/index.html
@@ -48,6 +48,17 @@
             margin: 0 auto;
         }
 
+        footer {
+            position: relative;
+            bottom: 0;
+            width: 100%;
+            background-color: #212529;
+            text-align: center;
+            padding: 10px;
+            color: white;
+        }
+        
+
         .c-button {
             min-width: 100%;
             font-weight: bolder;
