--- a/index.html
+++ b/index.html
@@ -83,6 +83,27 @@
             width: 80px;
             height: 80px;
         }
+        .round-button {
+            width: 90px;
+            height: 90px;
+            border-radius: 50%;
+            background-color: black;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 2px solid white;
+            cursor: pointer;
+            transition: transform 0.2s ease-in-out;
+        }
+        .round-button:hover {
+            transform: scale(1.1);
+        }
+        .slope-icon {
+            width: 70%;
+            height: 70%;
+            object-fit: contain;
+        }
+
 
         .lds-dual-ring:after {
             content: " ";
