--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
         .round-button {
             width: 90px;
             height: 90px;
-            border-radius: 50%;
+            border-radius: 20%;
             background-color: black;
+            background-image: url('img/slopeicon.png');
+
             display: flex;
             align-items: center;
             justify-content: center;
