--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
             border-radius: 20%;
             background-color: black;
             background-image: url('img/slopeicon.png');
+            background-size: cover; /* Ensure the background image is visible */
+            background-position: center; /* Center the image */
+
+
 
             display: flex;
             align-items: center;
