--- a/index.html
+++ b/index.html
@@ -233,9 +233,8 @@
         id="Play">
         <div class="mr-md-3 py-3 px-3 py-md-5 px-md-5 text-center overflow-hidden w-100 d-flex flex-column align-items-center justify-content-center">
                 <h2 class="display-5">GAMES CATALOUGE</h2>
-            <button class="round-button mt-3" onclick="window.location.href='slope';">
-                <img src="img/slope-icon.png" alt="Slope Game" class="slope-icon">
-            </button>
+            <button class="round-button mt-3" onclick="window.location.href='slope';"></button>
+
 
 
             
