--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
         .round-button:hover {
             transform: scale(1.1);
         }
+        .round-button:active {
+            transform: scale(0.9);
+        }
         .slope-icon {
             width: 70%;
             height: 70%;
