--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
             height: 80px;
         }
         .round-button {
-            width: 90px;
-            height: 90px;
-            border-radius: 20%;
+            width: 150px;
+            height: 150px;
+            border-radius: 10%;
             background-color: black;
             background-image: url('img/slopeicon.png');
             background-size: cover; /* Ensure the background image is visible */
@@ -97,7 +97,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            border: 2px solid white;
+            border: 2px solid rgba(255, 255, 255, 0.5); /* White with 50% transparency */
+
             cursor: pointer;
             transition: transform 0.2s ease-in-out;
         }
