--- a/run3/index.html
+++ b/run3/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=yes" />
-    <meta name="description" content="Play Slope - Unblocked Dev">
-    <meta property="og:title" content="Play Slope - Unblocked Dev">
-    <meta property="og:description" content="Enjoy the thrilling Slope game unblocked!">
+    <meta name="description" content="Play Run 3 - Unblocked Dev">
+    <meta property="og:title" content="Play Run 3 - Unblocked Dev">
+    <meta property="og:description" content="Enjoy the exiting game of Run 3 unblocked!">
     <meta property="og:image" content="img/slope-thumbnail.jpg">
     <title>Play Slope - Unblocked Dev</title>
     <!-- Favicon -->
@@ -98,12 +98,12 @@
     
     <!-- Game Section -->
     <header class="container mt-5 pt-5">
-        <h1 class="impact">Play Slope</h1>
-        <p class="lead">Experience the thrilling downhill challenge of Slope!</p>
+        <h1 class="impact">Play Run 3</h1>
+        <p class="lead">Experience the exiting game of Run 3!</p>
     </header>
     
     <div id="game-container">
-        <iframe src="https://unblocked-game66.com/gg/run-3/" allowfullscreen></iframe>
+        <iframe src="https://lekug.github.io/tn6pS9dCf37xAhkJv/" allowfullscreen></iframe>
 
     </div>
     <div id="Fullscreen">
