--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             height: 150px;
             border-radius: 15%;
             background-color: black;
+            background-image: url('img/slopeicon.png');
             background-size: cover; /* Ensure the background image is visible */
             background-position: center; /* Center the image */
 
@@ -237,11 +238,7 @@
         <div class="mr-md-3 py-3 px-3 py-md-5 px-md-5 text-center overflow-hidden w-100 d-flex flex-column align-items-center justify-content-center">
                 <h2 class="display-5">GAMES CATALOUGE</h2>
             <button class="round-button mt-3" onclick="window.location.href='slope';"></button>
-                    style="background-image: url('img/slopeicon.png');"></button>
-
             <button class="round-button mt-3" onclick="window.location.href='run3';"></button>
-                    style="background-image: url('img/run3icon.png');"></button>
-
 
 
 
