--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 <h2 class="display-5">GAMES CATALOUGE</h2>
             <button class="round-button mt-3" style="background-image: url('img/slopeicon.png');" onclick="window.location.href='slope';"></button>
 
-            <button class="round-button mt-3" onclick="window.location.href='run3';"></button>
+            <button class="round-button mt-3" style="background-image: url('img/run3.png');" onclick="window.location.href='run3';"></button>
 
 
 
