--- a/index.html
+++ b/index.html
@@ -236,6 +236,10 @@
         id="Play">
         <div class="mr-md-3 py-3 px-3 py-md-5 px-md-5 text-center overflow-hidden w-100 d-flex flex-column align-items-center justify-content-center">
                 <h2 class="display-5">GAMES CATALOUGE</h2>
+            <div class="game-icons-container">
+                <button class="round-button mt-3" style="background-image: url('img/slopeicon.png');" onclick="window.location.href='slope';"></button>
+                <button class="round-button mt-3" style="background-image: url('img/run3.png');" onclick="window.location.href='run3';"></button>
+            </div>
             <button class="round-button mt-3" style="background-image: url('img/slopeicon.png');" onclick="window.location.href='slope';"></button>
 
             <button class="round-button mt-3" style="background-image: url('img/run3.png');" onclick="window.location.href='run3';"></button>
