--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
             width: 80px;
             height: 80px;
         }
+        .game-icons-container {
+            display: flex;
+            flex-wrap: wrap;  /* Allow wrapping to new line */
+            justify-content: center; /* Center the icons horizontally */
+            gap: 16px;  /* Space between buttons */
+        }
         .round-button {
             width: 150px;
             height: 150px;
