--- a/index.html
+++ b/index.html
@@ -183,16 +183,16 @@
                         <div class="mw-md-lg">
                             <span class="mb-4 badge rounded-pill bg-light text-dark text-uppercase shadow">Top Unblocked Games Without A Flash
                             </span>
-                            <h1 class="mb-6 impact font-heading fs-1" style="letter-spacing: -1px;">Unlock A World Of <span>Unblocked Games</span> 🎮</h1>
+                            <!--<h1 class="mb-6 impact font-heading fs-1" style="letter-spacing: -1px;">Unlock A World Of <span>Unblocked Games</span> 🎮</h1>-->
 
 
-                            <!--<h1 style="opacity: 1; will-change: auto;" class="text-4xl md:text-6xl font-bold font-heading tracking-tight">
+                            <h1 style="opacity: 1; will-change: auto;" class="text-4xl md:text-6xl font-bold font-heading tracking-tight">
                                 Unlock A
                                 <span class="inline animate-gradient bg-gradient-to-r from-[#00dc68] via-[#9c40ff] to-[#00dc68] bg-[length:var(--bg-size)_100%] bg-clip-text text-transparent"></span>
                                 World Of
                                 <span class="inline animate-gradient bg-gradient-to-r from-[#00dc68] via-[#9c40ff] to-[#00dc68] bg-[length:var(--bg-size)_100%] bg-clip-text text-transparent">Unblocked Games</span>
                                  🎮
-                            </h1>-->
+                            </h1>
                             
 
                            
