--- a/index.html
+++ b/index.html
@@ -245,6 +245,8 @@
             <div class="game-icons-container">
                 <button class="round-button mt-3" style="background-image: url('img/slopeicon.png');" onclick="window.location.href='slope';"></button>
                 <button class="round-button mt-3" style="background-image: url('img/run3.png');" onclick="window.location.href='run3';"></button>
+                <button class="round-button mt-3" style="background-image: url('img/drivemad.png');" onclick="window.location.href='drivemad';"></button>
+
             </div>
 
 
