--- a/slope/index.html
+++ b/slope/index.html
@@ -125,7 +125,7 @@
 
     <script>
         document.querySelector('.c-button').onclick = function() {
-            var url = "https://google-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/sk1bx/version@843c1a10f4bf78019b513ea7a8a8c3146f3dfa59/2slope.xml&container=ig";
+            var url = "https://unblocked-game66.com/gg/slope/";
             
             var win = window.open(url, '_blank');
             win.document.body.style.margin = '0';
