--- a/deathrun3d/index.html
+++ b/deathrun3d/index.html
@@ -125,7 +125,7 @@
 
     <script>
         document.querySelector('.c-button').onclick = function() {
-            var url = "https://lekug.github.io/tn6pS9dCf37xAhkJv/";
+            var url = "https://coolubg.github.io/coolubg-list/crossy-road/";
             
             var win = window.open(url, '_blank');
             win.document.body.style.margin = '0';
