--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <button class="round-button mt-3" style="background-image: url('img/slopeicon.png');" onclick="window.location.href='slope';"></button>
                 <button class="round-button mt-3" style="background-image: url('img/run3.png');" onclick="window.location.href='run3';"></button>
                 <button class="round-button mt-3" style="background-image: url('img/drivemad.png');" onclick="window.location.href='drivemad';"></button>
-                <button class="round-button mt-3" style="background-image: url('img/crossyroad.jpeg');" onclick="window.location.href='deathrun3d';"></button>
+                <button class="round-button mt-3" style="background-image: url('img/crossyroad.jpeg');" onclick="window.location.href='crossyroad';"></button>
                 
                 
 
