--- a/crossyroad/index.html
+++ b/crossyroad/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=yes" />
-    <meta name="description" content="Play Run 3 - Unblocked Dev">
-    <meta property="og:title" content="Play Run 3 - Unblocked Dev">
+    <meta name="description" content="Play Crossy Road - Unblocked Dev">
+    <meta property="og:title" content="Play Crossy Road - Unblocked Dev">
     <meta property="og:description" content="Enjoy the exiting game of Run 3 unblocked!">
     <meta property="og:image" content="img/slope-thumbnail.jpg">
     <title>Play Crossy Road - Unblocked Dev</title>
