--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
                 <button class="round-button mt-3" style="background-image: url('img/run3.png');" onclick="window.location.href='run3';"></button>
                 <button class="round-button mt-3" style="background-image: url('img/drivemad.png');" onclick="window.location.href='drivemad';"></button>
                 <button class="round-button mt-3" style="background-image: url('img/crossyroad.jpeg');" onclick="window.location.href='crossyroad';"></button>
+                <button class="round-button mt-3" style="background-image: url('img/2048.png');" onclick="window.location.href='2048';"></button>
                 
                 
 
