--- a/slope/index.html
+++ b/slope/index.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content="img/slope-thumbnail.jpg">
     <title>Play Slope - Unblocked Dev</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="img/slope-icon.png" />
+    <link rel="icon" type="image/png" href="img/slopeicon.png" />
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
