--- a/drivemad/index.html
+++ b/drivemad/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Play Drive Mad - Unblocked Dev">
     <meta property="og:title" content="Play Drive Mad - Unblocked Dev">
     <meta property="og:description" content="Enjoy Drive Mad unblocked!">
-    <meta property="og:image" content="img/slope-thumbnail.jpg">
+    <meta property="og:image" content="img/drivemad.png">
     <title>Play Drive Mad - Unblocked Dev</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="img/slope-icon.png" />
