--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <title>Unblocked Dev</title>
     <!-- Favicon-->
     <link rel="icon" type="image/png"
-        href="https://res.cloudinary.com/s3ansh33p/image/upload/fl_lossy,f_auto/v1640786848/Classpad/classspad_2_grande_asfypp.webp" />
+        href="https://avatars.slack-edge.com/2023-02-01/4759086648272_b5f481bc4e14c16e2dc0_512.png" />
     <!-- Google Fonts-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com" rel="preconnect" />
