--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Unblocked Dev</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/png"
-        href="https://avatars.slack-edge.com/2023-02-01/4759086648272_b5f481bc4e14c16e2dc0_512.png" />
+    <link rel="icon" type="image/png" href="/img/ipodfavicon.png" />
+
     <!-- Google Fonts-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com" rel="preconnect" />
