--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 </div>
                 <hr class="opacity-100 text-white" />
                 <div class="d-flex align-items-center">
-                    <p class="m-0 text-white me-auto">Made&#xFE0E; by Joshua Walters</p>
+                    <p class="m-0 text-white me-auto">Made&#xFE0E; by Joshua W</p>
                     <p class="m-0" id="updated">Last Updated: Loading...</p>
                 </div>
             </div>
